--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,11 @@
             "savePath": "~/../css",
             "savePathReplacementPairs": null
         }
+    ],
+    "liveSassCompile.settings.watchOnLaunch": false,
+    "liveSassCompile.settings.excludeList": [
+        "/**/node_modules/**",
+        "/.vscode/**",
+        "/lesson{7,8}/**"
     ]
 }
